@@ -1,5 +1,5 @@
 /*
- * $Id: wresourc.h,v 1.7 2010/02/16 07:12:52 mikulik Exp $
+ * $Id: wresourc.h,v 1.8 2011/02/28 12:19:12 markisch Exp $
  */
 
 /* GNUPLOT - win/wresourc.h */
@@ -79,6 +79,8 @@
 
 /* wgraph.c */
 #define M_SAVE_AS_EMF  NUMMENU+14
+#define M_DOUBLEBUFFER NUMMENU+15
+#define M_OVERSAMPLE   NUMMENU+16
 
 /* wprinter.c */
 #define PSIZE_SBOX 100
